--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "axios": "^0.21.3",
-    "bcrypt": "^5.0.1"
+    "bcrypt": "^5.0.1",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "gh-pages": "^3.2.3"
